# mindpalace

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: DESIGN.md
mindpalace/: config.py  db.py  models.py
mindpalace/agent/: engine.py
mindpalace/api/: main.py  ws.py
mindpalace/api/routes/: auth.py  chat.py  history.py  ingest.py
mindpalace/llm/: provider.py
mindpalace/pipeline/: chunker.py  embedder.py
mindpalace/store/: vectordb.py
scripts/: load_dummy_data.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.json  sw.js
web/src/: App.tsx  api.ts  auth.ts  index.css  main.tsx
web/src/pages/: Chat.tsx  Login.tsx  Search.tsx  Settings.tsx  Sources.tsx
