[project]
name = "mindpalace"
version = "0.1.0"
description = "Personal RAG-powered AI agent for your digital life"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    # Vector store
    "chromadb>=0.5",
    # LLM
    "litellm>=1.40",
    # Embeddings
    "sentence-transformers>=3.0",
    # Processing
    "tiktoken>=0.7",
    # Config
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # Auth
    "webauthn>=2.0",
    "bcrypt>=4.0",
    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
